--- a/templates/galeria/add_imagem.html
+++ b/templates/galeria/add_imagem.html
@@ -29,7 +29,7 @@
         {% endfor %}
     </div>
     <div class="form-button">
-        <button type="submit" class="btn btn-success col-12" style="padding: top 5px;">Enviar</button>
+        <button type="submit" class="btn btn-success" style="padding: top 5px;">Enviar</button>
     </div>
 </form>
 
